--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   path_provider: ^2.1.2
   open_file: ^3.2.1
   url_launcher: ^6.2.5  # ✅ moved to correct section
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
